Fix: Added my name and github username

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div class="card">
-        <h1>Hi, I'm [Your Name] 👋</h1>
+        <h1>Hi, I'm Jose Miguel 👋</h1>
         <p>I am a Junior Developer specializing in Git and DevOps.</p>
         <p class="status">● Currently available for work</p>
         <hr>
-        <p>Check out my code at: <a href="https://github.com/[your-username]">My GitHub Profile</a></p>
+        <p>Check out my code at: <a href="https://github.com/josemiad">My GitHub Profile</a></p>
     </div>
 </body>
 </html>
